--- a/LoaderBook/style.css
+++ b/LoaderBook/style.css
@@ -5,6 +5,8 @@
     --book-border: var(--book-border-margin) solid var(--book-border-color);
     --book-width: 100px;
     --book-height: 60px;
+    --animation-delay: 1s;
+    --animation-duration: 1.2s;
 }
 
     body {
@@ -13,10 +15,6 @@
     }
 
     .wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
         height: 100%;
         width: 100%;
 
@@ -24,9 +22,10 @@
     }
 
     .book {
-        position: relative;
-
-        border: var(--book-border);
+        position: absolute;
+        top: 50%;
+        right: 50%;
+        transform: translate(50%, -50%);
 
         width: var(--book-width);
         height: var(--book-height);
@@ -37,20 +36,18 @@
         top: calc(-1 * var(--book-border-margin));
         right: calc(-1 * var(--book-border-margin));
 
-        border-top: var(--book-border);
-        border-bottom: var(--book-border);
-        border-right: var(--book-border);
+        border: var(--book-border);
 
         width: calc(var(--book-width) / 2);
         height: var(--book-height);
 
         transform-origin: 0 50%;
-        animation: flip 1.2s infinite linear;
+        animation: flip var(--animation-duration) infinite linear;
         animation-fill-mode: forwards;
 
         @for $i from 1 to 3 {
             &:nth-child($i) {
-                animation-delay: calc(1.4s * $i);
+                animation-delay: calc(var(--animation-delay) * $i);
             }
         }
     }
@@ -62,15 +59,18 @@
 
         20% {
             background: color-mod(var(--book-color) l(-10%));
+            border-left-color: var(--book-color);
         }
 
         29.9% {
             background: color-mod(var(--book-color) l(-10%));
+            border-left-color: var(--book-color);
         }
 
         30% {
             transform: perspective(200px) rotateY(-90deg);
             background: var(--book-border);
+            border-left-color: var(--book-color);
         }
 
         54.999% {
@@ -86,8 +86,12 @@
             background: var(--book-border);
         }
 
-        100% {
+        90% {
             transform: perspective(200px) rotateY(-180deg);
             background: var(--book-border);
+        }
+
+        100% {
+            opacity: 0;
         }
     }
